--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL_ISSUE = \"https://github.com/fictadvisor/fictadvisor-web/issues/865\"\n",
+    "URL_ISSUE = \"https://github.com/fictadvisor/fictadvisor-web/issues/868\"\n",
     "IS_FRONTEND = True\n",
     "RE_CLONE_REPOSITORY = False"
    ]
@@ -101,7 +101,7 @@
     "    try: \n",
     "        driver.get(url)\n",
     "        issue_title = driver.find_element(By.CLASS_NAME, \"js-issue-title\").text\n",
-    "        issue_description = driver.find_elements_by_tag_name('em')[0].text\n",
+    "        issue_description = driver.find_elements_by_css_selector('d-block,comment-body,markdown-body,js-comment-body')\n",
     "        if to_close: \n",
     "            driver.quit()\n",
     "        \n",
@@ -239,37 +239,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'title': 'Add button to sort students in table by name and surname', 'description': 'No description provided.'}\n",
-      "[personal-subject-teacher-tabs,branches,AnswersSaved,subject-tab,logs,buttonIcons,with-formik,create-password-page,calendar-section,StarButton,layout,types,groups,src,objects,column-chart,group-tab,numbered-text-area,poll-buttons,link-valid,input,personal-form,tabs-section,tab-panel,teacher-header-card,auth,email-verification,info,use-tab-state,group,add-delete-teachers,.git,schedule-page,avatars,security-tab,subject-card,progress,.storybook,TrashBucketButton,schedule-events-section,selective-tab,teacher-card,schedule,student-table,alert-button,authentication-buttons,radar-background,cards,single-question,common,use-tab-close,forgot-password-form,ISSUE_TEMPLATE,radio,button,lib,table,poll-page,password-recovery,tab,origin,priority-approve-page,CloseButton,schedule-header,poll-form,breadcrumbs,util,main-page,desktop-header,header-desktop-card,contract,schedule-time,answers-sheet,schedule-section,login-form-block,privacy-page,constants,schedule-info-card,checkboxes-section,email-confirmation-page,calendar-input,use-toast-error,contacts,student-resources,search-form,comment-tab,personal-teacher-card,pallete,pack,toast,contacts-block,resource-card,authentication-context,form,config,option,selective-block,gifs,search-pages,verify-email-token-page,entrant-dashboard-page,pop-ups,mobile,admin-panel,dates,api,token-popup,avatar-dropzone,404-page,link-expired,radio-button,completely-normal-folder,subject,weekArrows,discipline-related-fields,heads,drawer,right-block,rating,theme,personal-teacher-subject-page,header-mobile-card,poll,icon-button,button-mui,subject-search,pages,SortButton,toast-context,refs,PopupTitle,departments,Popup,admin-panel-layout,icons,roles,contract-page,account-page,custom-link,tag,partials,divider,[subjectId],telegram,variants,teachers,requests-table,tab-context,poll-card,questions-list,utils,date-picker,use-authentication,edit,poll-teacher-card,tags,public,students,personal-teacher-page,PopupContent,text-area,about-page,const,register-form,schedule-column,schedule-card,contract-admin-page,teacher-search,login-page,line-graph,dropdown,checkboxes-dropdown,entrant-approve-form,card-roles,subjects,styles,schedule-form,no-group-block,register-page,images,change-avatar-window,.github,general-tab,poll-teachers-page,personal-info,mobile-header,change-password-form,typography,ui,use-outside-click,PopupActions,steps,validation,tab-list,page-layout,opened-selective,users,forgot-password-page,schedule-line,switch,header,ArrowButton,priority-page,workflows,checkbox,user,floating-card,poll-fucked-page,create-password-form,store,permisson,components,footer,breakpoints,left-block,input-mui,use-toast,text-area-mui,circle-diagram,text-area-popup,teacher,schedule-dropdown,alert,hooks,register,services,disciplines,radar,schedule-input,admin,schedule-event-edit-section,entrant-search-form,groups-dropdown,admin-default,subject-teacher-search,logo-register-block,tooltip,icon-button-mui,slider,rights,entrant-admin-page,remotes,personal-teacher-tabs,comment,login-form]\n",
-      "3013\n"
-     ]
-    }
-   ],
-   "source": [
-    "issue = issue_meta(URL_ISSUE, driver) \n",
-    "folder_names = get_all_folder_names(DIRECTORY_FRONTEND_REPO)\n",
-    "folder_names_joined = f\"[{','.join(folder_names)}]\"\n",
-    "print (issue)\n",
-    "print(  folder_names_joined) \n",
-    "print(len(folder_names_joined)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,10 +259,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "folder_names_joined=','.join(get_all_folder_names(DIRECTORY_FRONTEND_REPO))\n",
+    "issue = issue_meta(URL_ISSUE, driver, )"
+   ]
   },
   {
    "cell_type": "code",
@@ -319,8 +291,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "file structure of needed folders: students\n",
-      " ['../src/fictadvisor-web/src/pages/admin/students/edit', '../src/fictadvisor-web/src/pages/admin/students/index.tsx', '../src/fictadvisor-web/src/pages/admin/students/create.tsx', '../src/fictadvisor-web/src/pages/admin/students/edit/[studentId].tsx']\n",
+      "file structure of needed folders: footer\n",
+      " ['../src/fictadvisor-web/src/components/common/layout/footer/constants', '../src/fictadvisor-web/src/components/common/layout/footer/Footer.tsx', '../src/fictadvisor-web/src/components/common/layout/footer/index.ts', '../src/fictadvisor-web/src/components/common/layout/footer/Footer.styles.ts', '../src/fictadvisor-web/src/components/common/layout/footer/constants/index.tsx']\n",
       "\n"
      ]
     }
@@ -328,8 +300,6 @@
    "source": [
     "folder_names = completion.choices[0].message.content.split(\",\")  \n",
     "folder_paths = find_folders('../', folder_names)\n",
-    "\n",
-    "\n",
     "structure_prompt = \"file structure of needed folders: \"\n",
     "\n",
     "for name, path in folder_paths.items():\n",
@@ -337,6 +307,13 @@
     "  \n",
     "  print(structure_prompt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -357,106 +334,100 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "import React from'react';import AdminPanelLayout from'@/components/common/layout/admin-panel-layout/AdminPanelLayout';const Index=()=>{return(<AdminPanelLayout><div></div></AdminPanelLayout>);};export default Index;\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "paths = structure_prompt\n",
     "structure_prompt = \"\" \n",
     "\n",
-    "for js_file_path in completion.choices[0].message.content.split(\",\"):\n",
-    "    minified = minify_js_file(js_file_path)\n",
-    "    structure_prompt += f\"file: {js_file_path}, content: {minified}\"\n",
-    "    print(minified)"
+    "\"\"\" TODO: SELECT NEEDED FILES LATER ( INSTEAD OF MINIFYING THEM ALL ) \"\"\"\n",
+    "\"\"\" TODO: HANDLE ERRORS WHEN FILE READING \"\"\"\n",
+    "for js_file_path in paths:\n",
+    "    try: \n",
+    "        minified = minify_js_file(js_file_path)\n",
+    "        print(minified)\n",
+    "        structure_prompt += (f\"file: {js_file_path}, content: {minified}\")\n",
+    "    except: \n",
+    "        pass\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "completion = client.chat.completions.create(\n",
+    "  model=\"gpt-3.5-turbo\",\n",
+    "  messages=[\n",
+    "    {\"role\": \"system\", \"content\": \"you have been provided with the files you need to respond. If there is not enough information, try to answer anyway, but ask for more context if necessary. You need to make a detailed plan of how to complete the task, what to look for, and what can go wrong, and write the code for it.\"},\n",
+    "    {\"role\": \"user\", \"content\": f\" How do i do this task: {issue['title']} using this: {structure_prompt}. Assume that in project used MUI, React, Next, Typescript\"}\n",
+    "  ]\n",
+    ")\n",
+    "plan = completion.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To add a button to sort students in a table by name and surname in the given file, you need to follow these steps:\n",
+      "Based on the provided plan, here is an example of how you could implement the necessary code changes to fix the bug:\n",
       "\n",
-      "1. Update the file: ../src/fictadvisor-web/src/pages/admin/students/index.tsx\n",
+      "```jsx\n",
+      "// Assuming the vertical command menu component is called VerticalMenu and the footer component is called Footer\n",
       "\n",
-      "2. Add the necessary imports: \n",
-      "```javascript\n",
-      "import React, { useState } from 'react';\n",
-      "import AdminPanelLayout from '@/components/common/layout/admin-panel-layout/AdminPanelLayout';\n",
-      "```\n",
+      "import React from \"react\";\n",
+      "import { VerticalMenu } from \"./VerticalMenu\";\n",
+      "import { Footer } from \"./Footer\";\n",
       "\n",
-      "3. Define a functional component called `Index`:\n",
-      "\n",
-      "```javascript\n",
-      "const Index = () => {\n",
-      "  const [students, setStudents] = useState([\n",
-      "      { name: 'John', surname: 'Doe', /* other student details */ },\n",
-      "      { name: 'Jane', surname: 'Smith', /* other student details */ },\n",
-      "      // Add more student data as needed\n",
-      "  ]);\n",
-      "\n",
-      "  const sortStudentsByName = () => {\n",
-      "    // Copy the students array to avoid mutating the state directly\n",
-      "    const sortedStudents = [...students];\n",
-      "\n",
-      "    sortedStudents.sort((a, b) => {\n",
-      "      // Compare names case-insensitively\n",
-      "      const nameA = a.name.toLowerCase();\n",
-      "      const nameB = b.name.toLowerCase();\n",
-      "\n",
-      "      if (nameA < nameB) return -1;\n",
-      "      if (nameA > nameB) return 1;\n",
-      "      return 0;\n",
-      "    });\n",
-      "\n",
-      "    setStudents(sortedStudents);\n",
-      "  };\n",
-      "\n",
-      "  const sortStudentsBySurname = () => {\n",
-      "    const sortedStudents = [...students];\n",
-      "\n",
-      "    sortedStudents.sort((a, b) => {\n",
-      "      // Compare surnames case-insensitively\n",
-      "      const surnameA = a.surname.toLowerCase();\n",
-      "      const surnameB = b.surname.toLowerCase();\n",
-      "\n",
-      "      if (surnameA < surnameB) return -1;\n",
-      "      if (surnameA > surnameB) return 1;\n",
-      "      return 0;\n",
-      "    });\n",
-      "\n",
-      "    setStudents(sortedStudents);\n",
-      "  };\n",
-      "\n",
+      "const GroupPage = () => {\n",
       "  return (\n",
-      "    <AdminPanelLayout>\n",
-      "      <div>\n",
-      "        <button onClick={sortStudentsByName}>Sort by Name</button>\n",
-      "        <button onClick={sortStudentsBySurname}>Sort by Surname</button>\n",
-      "        {/* Render the table and students list using the sorted data */}\n",
+      "    <>\n",
+      "      <VerticalMenu />\n",
+      "      <div className=\"content\">\n",
+      "        {/* The content of your \"Група\" page */}\n",
       "      </div>\n",
-      "    </AdminPanelLayout>\n",
+      "      <Footer />\n",
+      "    </>\n",
       "  );\n",
       "};\n",
       "\n",
-      "export default Index;\n",
+      "export default GroupPage;\n",
       "```\n",
       "\n",
-      "4. Replace the comment `Render the table and students list using the sorted data` with the code to render the table and students list using the `students` state.\n",
+      "In the above code, we assume that you have separate components for the vertical command menu and the footer. By placing them in the correct order in the GroupPage component, you ensure that the vertical menu appears before the content and the footer appears after the content.\n",
       "\n",
-      "Make sure to adjust the table and students list rendering based on the structure of the student data you have. The above code assumes each student object has at least `name` and `surname` properties, but you may need to update it accordingly.\n",
+      "Remember to modify the code based on your actual project structure and naming conventions.\n",
       "\n",
-      "Now, when you open the page where this component is rendered, you will see two buttons: \"Sort by Name\" and \"Sort by Surname\". Clicking on either of these buttons will sort the students in the table accordingly.\n"
+      "Additionally, you may need to adjust the CSS of the VerticalMenu and Footer components to ensure proper positioning. For example:\n",
+      "\n",
+      "```css\n",
+      "/* Assuming the VerticalMenu component has the class 'vertical-menu' */\n",
+      "\n",
+      ".vertical-menu {\n",
+      "  position: fixed;\n",
+      "  top: 0;\n",
+      "  bottom: 0;\n",
+      "  width: 200px;\n",
+      "  /* Add any other necessary styles for the menu */\n",
+      "  z-index: 100; /* Increase the z-index value if necessary */\n",
+      "}\n",
+      "\n",
+      "/* Assuming the Footer component has the class 'footer' */\n",
+      "\n",
+      ".footer {\n",
+      "  /* Add any necessary styles for the footer */\n",
+      "}\n",
+      "```\n",
+      "\n",
+      "Again, please customize the CSS code according to your project's specific requirements.\n",
+      "\n",
+      "Remember to test the changes on a device or browser window with the resolution specified in the bug report (1023px by 825px).\n"
      ]
     }
    ],
@@ -464,11 +435,13 @@
     "completion = client.chat.completions.create(\n",
     "  model=\"gpt-3.5-turbo\",\n",
     "  messages=[\n",
-    "    {\"role\": \"system\", \"content\": \"you have been provided with the files you need to respond. If there is not enough information, try to answer anyway, but ask for more context if necessary. You need to make a detailed plan of how to complete the task, what to look for, and what can go wrong, and write the code for it.\"},\n",
-    "    {\"role\": \"user\", \"content\": f\" How do i do this task: {issue['title']} using this: {structure_prompt}\"}\n",
+    "    {\"role\": \"system\", \"content\": \"Act as high experienced React developer. You need to write code that asked using plan provided if needed \"},\n",
+    "    {\"role\": \"user\", \"content\": f\" How do i do this task: {issue['title']} using this: {structure_prompt}. Assume that in project used MUI, React, Next, Typescript\\n plan: {plan}\" }\n",
     "  ]\n",
     ")\n",
-    "print(completion.choices[0].message.content)"
+    "print(completion.choices[0].message.content)\n",
+    "\n",
+    "\"\"\" TODO: NEED MORE CONTEXT FROM COMPONENTS, MAKE LIST OF THEM AND FEED TO GPT WHEN NEEDED \"\"\""
    ]
   },
   {
