dataset creation init

--- a/src/notebooks/gpt3.5-finetuning/main.ipynb
+++ b/src/notebooks/gpt3.5-finetuning/main.ipynb
@@ -68,7 +68,7 @@
    "source": [
     "CONTACT_NAME = \"https://t.me/akiyama_kiyoshi\"\n",
     "URL_FRONTEND_REPO = \"https://github.com/fictadvisor/fictadvisor-web.git\" \n",
-    "DIRECTORY_FRONTEND_REPO = '../assets/repositories/frontend/'\n",
+    "DIRECTORY_FRONTEND_REPO = '../../../assets/repositories/frontend/'\n",
     "OPENAI_API_KEY=\"\""
    ]
   },
@@ -207,7 +207,7 @@
     }
    ],
    "source": [
-    "load_dotenv('./.env')"
+    "load_dotenv('../../.env')"
    ]
   },
   {
@@ -286,17 +286,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "file structure of needed folders: footer\n",
-      " ['../src/fictadvisor-web/src/components/common/layout/footer/constants', '../src/fictadvisor-web/src/components/common/layout/footer/Footer.tsx', '../src/fictadvisor-web/src/components/common/layout/footer/index.ts', '../src/fictadvisor-web/src/components/common/layout/footer/Footer.styles.ts', '../src/fictadvisor-web/src/components/common/layout/footer/constants/index.tsx']\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "folder_names = completion.choices[0].message.content.split(\",\")  \n",
     "folder_paths = find_folders('../', folder_names)\n",
@@ -376,59 +366,67 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided plan, here is an example of how you could implement the necessary code changes to fix the bug:\n",
+      "Assuming you are using React and MUI in your project, here's a possible implementation to fix the bug mentioned:\n",
       "\n",
-      "```jsx\n",
-      "// Assuming the vertical command menu component is called VerticalMenu and the footer component is called Footer\n",
+      "Step 1: Identify the code responsible for validating the password field.\n",
       "\n",
-      "import React from \"react\";\n",
-      "import { VerticalMenu } from \"./VerticalMenu\";\n",
-      "import { Footer } from \"./Footer\";\n",
+      "Locate the code that performs the password field validation. This might be in the component that corresponds to the \"Безпека\" tab or any related utility functions.\n",
       "\n",
-      "const GroupPage = () => {\n",
+      "Step 2: Check the existing validation logic.\n",
+      "\n",
+      "Check if the existing validation logic handles Cyrillic characters correctly. Look for any regex patterns or validation functions being used.\n",
+      "\n",
+      "Step 3: Update the validation logic.\n",
+      "\n",
+      "If the existing validation logic does not support Cyrillic characters, update it with the following approach:\n",
+      "\n",
+      "```typescript\n",
+      "import React, { useState } from \"react\";\n",
+      "import TextField from \"@mui/material/TextField\";\n",
+      "\n",
+      "const MyComponent = () => {\n",
+      "  const [password, setPassword] = useState(\"\");\n",
+      "  const [isValid, setIsValid] = useState(true);\n",
+      "\n",
+      "  const handlePasswordChange = (event: React.ChangeEvent<HTMLInputElement>) => {\n",
+      "    const newPassword = event.target.value;\n",
+      "    const passwordRegex = /^[A-Za-zА-Яа-я0-9]+$/;\n",
+      "    const isValidPassword = passwordRegex.test(newPassword);\n",
+      "    setIsValid(isValidPassword);\n",
+      "    setPassword(newPassword);\n",
+      "  };\n",
+      "\n",
       "  return (\n",
-      "    <>\n",
-      "      <VerticalMenu />\n",
-      "      <div className=\"content\">\n",
-      "        {/* The content of your \"Група\" page */}\n",
-      "      </div>\n",
-      "      <Footer />\n",
-      "    </>\n",
+      "    <TextField\n",
+      "      label=\"Password\"\n",
+      "      type=\"password\"\n",
+      "      value={password}\n",
+      "      error={!isValid}\n",
+      "      helperText={!isValid ? \"Invalid password\" : \"\"}\n",
+      "      onChange={handlePasswordChange}\n",
+      "    />\n",
       "  );\n",
       "};\n",
-      "\n",
-      "export default GroupPage;\n",
       "```\n",
       "\n",
-      "In the above code, we assume that you have separate components for the vertical command menu and the footer. By placing them in the correct order in the GroupPage component, you ensure that the vertical menu appears before the content and the footer appears after the content.\n",
+      "Here, a new state variable `isValid` is used to track the validity of the password field. The `handlePasswordChange` function is updated to perform validation using the regular expression `^[A-Za-zА-Яа-я0-9]+$`, which allows both Latin and Cyrillic characters.\n",
       "\n",
-      "Remember to modify the code based on your actual project structure and naming conventions.\n",
+      "Step 4: Test the password field validation.\n",
       "\n",
-      "Additionally, you may need to adjust the CSS of the VerticalMenu and Footer components to ensure proper positioning. For example:\n",
+      "Test the \"Безпека\" tab by entering Cyrillic characters in the password field and verify that the validation works as expected, recognizing valid and invalid Cyrillic passwords.\n",
       "\n",
-      "```css\n",
-      "/* Assuming the VerticalMenu component has the class 'vertical-menu' */\n",
-      "\n",
-      ".vertical-menu {\n",
-      "  position: fixed;\n",
-      "  top: 0;\n",
-      "  bottom: 0;\n",
-      "  width: 200px;\n",
-      "  /* Add any other necessary styles for the menu */\n",
-      "  z-index: 100; /* Increase the z-index value if necessary */\n",
-      "}\n",
-      "\n",
-      "/* Assuming the Footer component has the class 'footer' */\n",
-      "\n",
-      ".footer {\n",
-      "  /* Add any necessary styles for the footer */\n",
-      "}\n",
-      "```\n",
-      "\n",
-      "Again, please customize the CSS code according to your project's specific requirements.\n",
-      "\n",
-      "Remember to test the changes on a device or browser window with the resolution specified in the bug report (1023px by 825px).\n"
+      "Remember to update the code according to your project's specific implementation and test thoroughly.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' TODO: NEED MORE CONTEXT FROM COMPONENTS, MAKE LIST OF THEM AND FEED TO GPT WHEN NEEDED '"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
